load("@npm//@bazel/typescript:index.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

exports_files(
    ["tsconfig.json"],
    visibility = ["//:__subpackages__"],
)

exports_files(["build/rules/package.json.tpl"])

ts_config(
    name = "tsconfig_chain",
    src = "tsconfig.json",
)
